--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-luckyilia-plugin": "^0.0.5",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
