fix proxy query params

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
         server_name testprod.ru www.testprod.ru;
 
         location  ~ ^/api/(.*)$ {
-            proxy_pass   $scheme://80.12.190.131:8443/$1$is_args$args;
+            proxy_pass   $scheme://80.14.181.121:8443/$1$is_args$args;
             proxy_redirect     off;
             proxy_set_header   Host             $host;
             proxy_set_header   X-Real-IP        $remote_addr;
@@ -28,12 +28,12 @@ server {
 
 }
 server {
-    if ($host = www.productionapputv.ru) {
+    if ($host = www.testprod.ru) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
-    if ($host = productionapputv.ru) {
+    if ($host = testprod.ru) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
@@ -41,7 +41,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name productionapputv.ru www.productionapputv.ru;
+        server_name testprod.ru www.testprod.ru;
     return 404; # managed by Certbot
 
 }
